feat(admin): 非ssr构建并运行成功

--- a/src/Shriek.CMS.UI.Admin/ClientApp/index.html
+++ b/src/Shriek.CMS.UI.Admin/ClientApp/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="后台管理系统">
   <meta name="author" content="stbui">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="./vendor-manifest.json">
   <style>
     app-root>.background {
       display: block;
